kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
        - name: whereami
          image: gcr.io/google-samples/whereami:v1.2.19
          ports:
            - containerPort: 8080
