kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whereami
spec:
  type: NodePort
  selector:
    app: whereami
  ports:
    - port: 8080
      targetPort: 8080
